--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "@mui/x-data-grid": "^8.7.0",
+    "@mui/x-data-grid": "^8.8.0",
+    "@mui/x-date-pickers": "^8.8.0",
     "@tailwindcss/vite": "^4.1.8",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
