--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.15",
     "@mui/material": "^7.1.1",
     "@mui/x-data-grid": "^8.8.0",
     "@mui/x-date-pickers": "^8.8.0",
