--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,12 @@
     "@mui/material": "^7.1.1",
     "@mui/x-data-grid": "^8.8.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
