--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
     "@uiw/react-codemirror": "^4.25.1",
+    "codemirror-wrapped-line-indent": "^1.0.9",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
