--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@uiw/react-codemirror": "^4.25.1",
     "codemirror-wrapped-line-indent": "^1.0.9",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
