--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
     "@uiw/react-codemirror": "^4.25.1",
+    "axios": "^1.13.1",
     "codemirror-wrapped-line-indent": "^1.0.9",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.3",
